# automation-team-store-challenge

./: .env-sample  .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  shoes.csv
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/apps/core/: api.py  api_views.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/migrations/: 0002_auto_20210201_0037.py
backend/apps/core/tests/: conftest.py  shoes.csv  test_api_views.py  test_serializers.py
backend/config/: settings.py  urls.py
dafiti_challenge/: settings.py  urls.py
dafiti_challenge/core/: api_views.py  models.py  serializers.py  urls.py
dafiti_challenge/core/migrations/: 0001_initial.py
dafiti_challenge/core/tests/: conftest.py  test_api_views.py  test_serializers.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.vue  main.js  router.js
frontend/src/components/: Csv.vue  ShoeDetail.vue  Shoes.vue  ShoesList.vue
frontend/src/services/: api.js  csvService.js  shoeService.js
frontend/src/store/: index.js
frontend/src/store/modules/: csv.js  shoes.js
nginx/: dev.conf  prod.conf
